# stm32-cmake-projects

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  stm32-cmake-env.ps1  stm32-cmake-env.sh
cmake/: CommonSTM.cmake
eclipse/: .cproject  .project  stm32f303vc-cmake.launch  stm32h743-cmake-freertos.launch  stm32h743-cmake-l3gd20h.launch  stm32h743-cmake-lwip-raw.launch  stm32h743-cmake.launch
eclipse/h743zi/: .cproject
freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
lwip/: CMakeLists.txt
lwip-raw/: CMakeLists.txt  main.c
lwip-raw-udp-echoserver/: CMakeLists.txt
lwip-raw-udp-echoserver/inc/: app_ethernet.h  lwip_raw_conf.h.in
lwip-raw-udp-echoserver/lan8742/: CMakeLists.txt
lwip-raw-udp-echoserver/src/: ethernetif.c  hardware_init.c  stm32h7xx_it.c
lwip-raw/inc/: app_dhcp.h  hardware_init.h  lwip_raw_conf.h.in  main.h  udp_config.h
lwip-raw/src/: CMakeLists.txt  app_dhcp.c  app_ethernet.c  ethernetif.c  stm32h7xx_it.c  syscalls.c  udp_echoserver.c
projects/etl/: CMakeLists.txt  main.cpp
projects/fmt/: CMakeLists.txt  main.cpp
projects/freertos/: CMakeLists.txt  main.cpp  stm32f3xx_hal_conf.h
projects/freertos/blinky/: CMakeLists.txt
projects/freertos/task-notification/: stm32h7xx_hal_conf.h
projects/h743zi/: .gitignore
projects/h743zi/freertos/: CMakeLists.txt
projects/h743zi/lwip-raw-udp-echoserver/: CMakeLists.txt  main.c
projects/h743zi/lwip-raw-udp-echoserver/inc/: FreeRTOSConfig.h  app_dhcp.h  app_ethernet.h  ethernetif.h  hardware_init.h  lwipopts.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  stm32h7xx_nucleo_errno.h  udp_echoserver.h
projects/h743zi/lwip-raw-udp-echoserver/lan8742/: lan8742.h
projects/h743zi/lwip-raw-udp-echoserver/src/: app_dhcp.c  app_ethernet.c  ethernetif.c  hardware_init.c  lan8742.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  udp_echoserver.c
projects/h743zi/minimal/: CMakeLists.txt
projects/h743zi/task-notification/: CMakeLists.txt  FreeRTOSConfig.h  hw.cpp  hw.h  main.cpp  stm32h7xx_nucleo.c  stm32h7xx_nucleo.h  stm32h7xx_nucleo_conf.h  syscalls.c
projects/h743zi/test/l3gd20h/: CMakeLists.txt  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c
projects/h743zi/test/l3gd20h/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  stm32h7xx_nucleo_conf.h
projects/lwip-raw-udp-echoserver/inc/: CMakeLists.txt
projects/lwip-raw-udp-echoserver/src/: CMakeLists.txt  app_dhcp.c  app_ethernet.c  stm32h7xx_hal_timebase_tim.c
projects/minimal/: CMakeLists.txt  main.c
projects/test/l3gd20h/: CMakeLists.txt
scripts/: apply-clang-format.sh
test/: CMakeLists.txt  l3gd20h.cpp
test/l3gd20h/: CMakeLists.txt  STM32H743ZITx_FLASH.ld  main.c
test/l3gd20h/Inc/: CMakeLists.txt  conf.h.in  main.h  stm32h7xx_nucleo_conf.h
